--- a/nav.html
+++ b/nav.html
@@ -6,5 +6,11 @@
         <li>
             <a href="#">About us</a>
         </li>
+        <li>
+            <a href="#">Products</a>
+        </li>
+        <li>
+            <a href="#">History</a>
+        </li>
     </ul>
 </div>
