--- a/nav.html
+++ b/nav.html
@@ -10,6 +10,9 @@
             <a href="#">Products</a>
         </li>
         <li>
+            <a href="#">Services</a>
+        </li>
+        <li>
             <a href="#">History</a>
         </li>
     </ul>
