--- a/nav.html
+++ b/nav.html
@@ -1,19 +1,13 @@
 <div class="nav">
     <ul>
         <li>
+            <a href="#">Home</a>
+        </li>
+        <li>
             <a href="#">Contact</a>
         </li>
         <li>
             <a href="#">About us</a>
-        </li>
-        <li>
-            <a href="#">Products</a>
-        </li>
-        <li>
-            <a href="#">Services</a>
-        </li>
-        <li>
-            <a href="#">History</a>
         </li>
     </ul>
 </div>
