--- a/nav.html
+++ b/nav.html
@@ -3,5 +3,11 @@
         <li>
             <a href="#">Home</a>
         </li>
+        <li>
+            <a href="#">About</a>
+        </li>
+        <li>
+            <a href="#">History</a>
+        </li>
     </ul>
 </div>
