--- a/nav.html
+++ b/nav.html
@@ -3,5 +3,11 @@
         <li>
             <a href="#">Home</a>
         </li>
+        <li>
+            <a href="#">Projects</a>
+        </li>
+        <li>
+            <a href="#">Services</a>
+        </li>
     </ul>
 </div>
