--- a/project.html
+++ b/project.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1>Projects</h1>
+        <ul>
+            <li>project 1</li>
+            <li>project 2</li>
+        </ul>
     </body>
 </html>
